Fix spacing at the bottom of pages

--- a/assets/stylesheets/styles.less
+++ b/assets/stylesheets/styles.less
@@ -191,6 +191,7 @@ sup {
 
   .p-content {
     margin-top: 1em;
+    margin-bottom: 2rem;
 
     h1, h2, h3, h4, h5, h6 {
       margin-bottom: 1rem;
